# rviz_plugin_osvr

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
include/rviz_plugin_osvr/: Distortion.h  distortion.h  ogre_osvr.h  osvr_client.h  plugin_display.h  rviz_plugin_osvr.h
launch/: load.launch  rviz_plugin_osvr.launch
ogre_media/: .glsl120.program.swp  .warp.frag.swp  glsl120.program  osvr.compositor  warp.frag  warp.material
rviz_cfg/: rviz_plugin_osvr.rviz
scripts/: start_osvr_server.sh
src/: Distortion.cpp  distortion.cpp  ogre_osvr.cpp  osvr_client.cpp  plugin_display.cpp  rviz_plugin_osvr.cpp
