<?xml version="1.0"?>
<package>
  <name>rviz_plugin_osvr</name>
  <version>0.0.1</version>
  <description>RViz plugin for OSVR</description>

  <maintainer email="veix123@gmail.com"></maintainer>
  <author email="veix123@gmail.com">Veiko Vunder</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--build_depend>oculus_sdk</build_depend-->
  <!--run_depend>oculus_sdk</run_depend-->
  
  <!--build_depend>libogre-dev</build_depend-->
  <!--run_depend>libogre-dev</run_depend-->

  <!--build_depend>libqt4-dev</build_depend-->
  <!--run_depend>libqt4-dev</run_depend-->
  
  <!--build_depend>libqt4-opengl-dev</build_depend-->
  <!--run_depend>libqt4-opengl-dev</run_depend-->
  
  <!--build_depend>boost</build_depend-->
  <!--run_depend>boost</run_depend-->
  
  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>

  <!--build_depend>tf</build_depend-->
  <!--run_depend>tf</run_depend-->

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
  
</package>
